feat: Add demo data management utilities
- Created demo:cleanup script to remove all demo data
- Added demo:test script to verify demo state
- Added demo:reset to cleanup and reseed in one command
- All demo management now available via npm scripts:
  - npm run demo:seed (create demo data)
  - npm run demo:cleanup (remove demo data)
  - npm run demo:reset (cleanup + seed)
  - npm run demo:test (verify demo state)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "archive:orders": "tsx scripts/archive-orders.ts",
     "clear-db": "tsx scripts/clear-db.ts",
     "demo:seed": "tsx scripts/demo-seed.ts",
-    "demo:reset": "curl -X POST http://localhost:3000/api/demo/reset",
+    "demo:cleanup": "tsx scripts/demo-cleanup.ts",
+    "demo:reset": "npm run demo:cleanup && npm run demo:seed",
+    "demo:test": "tsx scripts/test-demo.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
