--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "ingest:history": "node scripts/ingest-historical.js",
     "ingest:erg": "node scripts/ingest-erg.js",
     "hazmat:search": "node scripts/search-hazmat.js",
-    "classify:shopify": "node scripts/classify-shopify-products.js"
+    "classify:shopify": "node scripts/classify-shopify-products.js",
+    "reclassify:products": "node scripts/reclassify-products.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.864.0",
